[package]
name = "lab"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
async-trait = "0.1.53"
log = "0.4"
prost = "0.9"
tribbler = { path = "../tribbler" }
rand = "0.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.6"
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
futures = "0.3"

[dev-dependencies]
env_logger = "0.9"

[build-dependencies]
tonic-build = { version = "0.6", features = ["rustfmt"] }
